--- a/examen/estructura_practica_uno/pubspec.yaml
+++ b/examen/estructura_practica_uno/pubspec.yaml
@@ -17,6 +17,7 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.3
+  splashscreen: ^1.3.5
 
 dev_dependencies:
   flutter_test:
@@ -33,6 +34,8 @@ flutter:
 
   assets:
     - assets/images/app_icon.png
+    - assets/images/logo.png
+    - assets/images/splashscreen.jpg
   #   - images/a_dot_ham.jpeg
 
   # fonts:
