--- a/examen/estructura_practica_uno/pubspec.yaml
+++ b/examen/estructura_practica_uno/pubspec.yaml
@@ -27,7 +27,7 @@ dev_dependencies:
 flutter_icons:
   android: "launcher_icon"
   ios: true
-  image_path: "assets/images/app_icon.png"
+  image_path: "assets/images/logo.png"
 
 flutter:
   uses-material-design: true
