--- a/ER_app/gym_app/android/app/src/main/AndroidManifest.xml
+++ b/ER_app/gym_app/android/app/src/main/AndroidManifest.xml
@@ -2,7 +2,8 @@
     package="com.example.gym_app">
    <application
         android:label="gym_app"
-        android:icon="@mipmap/ic_launcher">
+       android:icon="@mipmap/ic_launcher"
+       android:requestLegacyExternalStorage="true">
         <activity
             android:name=".MainActivity"
             android:launchMode="singleTop"
