feat(e03): adds news selection per category

--- a/examen/e03/pubspec.yaml
+++ b/examen/e03/pubspec.yaml
@@ -15,7 +15,7 @@ dependencies:
   http: ^0.13.1
   flutter_bloc: ^7.0.0
   equatable: ^2.0.0
-  font_awesome_flutter: ^8.12.0
+  font_awesome_flutter: ^9.0.0
   auth_buttons: ^1.0.0
   firebase_core: ^1.0.1
   firebase_auth: ^1.0.1  
@@ -23,6 +23,7 @@ dependencies:
   cloud_firestore: ^1.0.4
   firebase_storage: ^8.0.2
   image_picker: ^0.7.4
+  extended_image: ^4.0.1
 
 
 dev_dependencies:
