--- a/examen/e03/pubspec.yaml
+++ b/examen/e03/pubspec.yaml
@@ -24,6 +24,9 @@ dependencies:
   firebase_storage: ^8.0.2
   image_picker: ^0.7.4
   extended_image: ^4.0.1
+  hive: ^1.4.4+1
+  path_provider: ^2.0.1
+  build_runner: ^1.8.0
 
 
 dev_dependencies:
