--- a/ER_app/gym_app/pubspec.yaml
+++ b/ER_app/gym_app/pubspec.yaml
@@ -18,7 +18,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 version: 1.0.0+1
 
 environment:
-  sdk: ">=2.7.0 <3.0.0"
+  sdk: ">=2.12.0 <3.0.0"
 
 dependencies:
   flutter:
@@ -26,6 +26,10 @@ dependencies:
   google_fonts: ^2.0.0
   flutter_bloc: ^7.0.0
   image_picker: ^0.7.3
+  equatable: ^2.0.0
+  http: ^0.13.1
+  build_runner: ^1.8.0
+  cupertino_icons: ^1.0.0
   
 
 
