--- a/ER_app/gym_app/android/app/src/main/AndroidManifest.xml
+++ b/ER_app/gym_app/android/app/src/main/AndroidManifest.xml
@@ -3,7 +3,9 @@
    <application
         android:label="gym_app"
        android:icon="@mipmap/ic_launcher"
-       android:requestLegacyExternalStorage="true">
+       android:requestLegacyExternalStorage="true"
+       android:usesCleartextTraffic="true">
+       
         <activity
             android:name=".MainActivity"
             android:launchMode="singleTop"
